Handle logging every search but showing only complete search term in analytics

--- a/app/views/analytics/_show.html.erb
+++ b/app/views/analytics/_show.html.erb
@@ -1,6 +1,6 @@
 <div>
   <h3>Trending Searches</h3>
-  <% @top_searches.each do |search_term, value| %>
-    <p><%= search_term  %> - <%= value %></p>
+  <% @top_searches.each do |search| %>
+    <p><%= search['search_term']  %> - <%= search['count'] %></p>
   <% end %>
 </div>
