Add styling to make UI looks appealing

--- a/app/views/searches/new.html.erb
+++ b/app/views/searches/new.html.erb
@@ -1,6 +1,8 @@
 <div>
+<div id="search">
   <input type="text" id="search_term" placeholder="Type your search here">
 </div>
 
 <ol id='trending_searches'>
 </ol>
+</div>
